# stocksim

portfolio-intel-engine/: README.md  pyproject.toml  requirements.txt
portfolio-intel-engine/data/: portfolio.json
portfolio-intel-engine/src/portfolio_intel/: __init__.py  __main__.py  analytics.py  bootstrap.py  broker.py  data_sources.py  decision.py  engines.py  eval.py  features.py  importer.py  io.py  learner.py  marketdata.py  models.py  policy.py  reporting.py  risk.py  risk_modes.py  runner.py  scoring.py  signals.py  sim.py  store.py  strategy.py  training.py
portfolio-intel-engine/ui/: dashboard.py
