[project]
name = "portfolio-intel-engine"
version = "0.1.0"
description = "Non-trading AI portfolio intelligence + risk + simulation engine"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "requests>=2.32",
  "python-dateutil>=2.9",
  "rich>=13.9",
  "yfinance>=0.2.40",
  "scikit-learn>=1.5",
  "streamlit>=1.37",
  "plotly>=5.22",
  "pyarrow>=16.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

